# lincoln

./: .gitignore  .pre-commit-config.yaml  README.md  lincolnlayer.py  lincolnlog.py  logs.blend  main.py  notation.rst  notation_scratchpad.rst  pyproject.toml
